--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/favicon/favicon-16x16.png"
+      href="./src/assets/favicon.svg"
     />
     <!-- Font family cdn start -->
     <link
